<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Input" Id="{4c9dfc78-dde0-47bb-a8fe-9d550e4bab0d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//***MCP************************************************************************

//EL3068 - AI1
	R1_01_00 		AT %I*: INT;
	R1_01_00_Status AT %I*: WORD;
	R1_01_01 		AT %I*: INT;
	R1_01_01_Status AT %I*: WORD;
	R1_01_02 		AT %I*: INT;
	R1_01_02_Status AT %I*: WORD;
	R1_01_03 		AT %I*: INT;
	R1_01_03_Status AT %I*: WORD;
	R1_01_04 		AT %I*: INT;
	R1_01_04_Status AT %I*: WORD;
	R1_01_05 		AT %I*: INT;
	R1_01_05_Status AT %I*: WORD;
	R1_01_06 		AT %I*: INT;
	R1_01_06_Status AT %I*: WORD;
	R1_01_07 		AT %I*: INT;
	R1_01_07_Status AT %I*: WORD;

	//EL3068 - AI2
	R1_02_00 		AT %I*: INT;
	R1_02_00_Status AT %I*: WORD;
	R1_02_01 		AT %I*: INT;
	R1_02_01_Status AT %I*: WORD;
	R1_02_02 		AT %I*: INT;
	R1_02_02_Status AT %I*: WORD;
	R1_02_03 		AT %I*: INT;
	R1_02_03_Status AT %I*: WORD;
	R1_02_04 		AT %I*: INT;
	R1_02_04_Status AT %I*: WORD;
	R1_02_05 		AT %I*: INT;
	R1_02_05_Status AT %I*: WORD;
	R1_02_06 		AT %I*: INT;
	R1_02_06_Status AT %I*: WORD;
	R1_02_07 		AT %I*: INT;
	R1_02_07_Status AT %I*: WORD;
	
	//EL1008 - DI1
	R1_03_00 AT	%I*: BOOL; //Master stop PB not pressed - black pb on mcp
	R1_03_01 AT	%I*: BOOL; //case Estop circuit okay (Rly1 (120vac)
	R1_03_02 AT %I*: BOOL; //MCP PSU1 DC OK
	R1_03_03 AT %I*: BOOL; //
	R1_03_04 AT %I*: BOOL; //
	R1_03_05 AT %I*: BOOL; //spare
	R1_03_06 AT %I*: BOOL; //spare
	R1_03_07 AT %I*: BOOL; //spare
	
	//EL1008 - DI2
	R1_04_00 AT	%I*: BOOL;  
	R1_04_01 AT	%I*: BOOL;
	R1_04_02 AT %I*: BOOL; 
	R1_04_03 AT %I*: BOOL; 
	R1_04_04 AT %I*: BOOL; 
	R1_04_05 AT %I*: BOOL; 
	R1_04_06 AT %I*: BOOL; 
	R1_04_07 AT %I*: BOOL; 
	
	//EL1008 - DI3
	R1_07_00 AT	%I*: BOOL;  
	R1_07_01 AT	%I*: BOOL;
	R1_07_02 AT %I*: BOOL; 
	R1_07_03 AT %I*: BOOL; 
	R1_07_04 AT %I*: BOOL; 
	R1_07_05 AT %I*: BOOL; 
	R1_07_06 AT %I*: BOOL; 
	R1_07_07 AT %I*: BOOL;
	
	//add CANbus
	
	//Ethercat Device Voltage - subject to change because the VM board is still under development
	(*B170357_CapRaw AT %I* : ARRAY[0..24] OF UINT;
	B170357_BatLevel AT %I* : BOOL;
	B170357_Heartbeat AT %I* : BOOL;*)

	R1_10_CapNumber AT %I* : ARRAY [1..12] OF  ST_UC_Status; //only used with DBC file.
	R1_10_UC_7F_status AT %I* : ST_UC_Status_Dummy;
	R1_10_UC_status AT %I* : ARRAY [1..12] OF ST_UC_Status_Dummy;

	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>