<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Output" Id="{43c44948-a042-4d4b-b02b-4b218e878c9f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//***MCP 
	//EL2008 - DQ1
	R1_05_00 AT %Q*: BOOL;
	R1_05_01 AT %Q*: BOOL;
	R1_05_02 AT %Q*: BOOL;
	R1_05_03 AT %Q*: BOOL;
	R1_05_04 AT %Q*: BOOL;
	R1_05_05 AT %Q*: BOOL;
	R1_05_06 AT %Q*: BOOL;
	R1_05_07 AT %Q*: BOOL;
	
	//EL2008 - DQ2
	R1_06_00 AT %Q*: BOOL;
	R1_06_01 AT %Q*: BOOL;
	R1_06_02 AT %Q*: BOOL;
	R1_06_03 AT %Q*: BOOL;
	R1_06_04 AT %Q*: BOOL;
	R1_06_05 AT %Q*: BOOL;
	R1_06_06 AT %Q*: BOOL;
	R1_06_07 AT %Q*: BOOL;
	
	//EL2008 - DQ3
	R1_08_00 AT %Q*: BOOL;
	R1_08_01 AT %Q*: BOOL;
	R1_08_02 AT %Q*: BOOL;
	R1_08_03 AT %Q*: BOOL;
	R1_08_04 AT %Q*: BOOL;
	R1_08_05 AT %Q*: BOOL;
	R1_08_06 AT %Q*: BOOL;
	R1_08_07 AT %Q*: BOOL;
	
	//EL4008 - AQ1
	R1_09_00 AT %Q*: INT;	//Charger 1 - Voltage Setpoint
	R1_09_01 AT %Q*: INT;	//Charger 2 - Voltage Setpoint
	R1_09_02 AT %Q*: INT;	//Charger 3 - Voltage Setpoint
	R1_09_03 AT %Q*: INT;	//Charger 4 - Voltage Setpoint
	R1_09_04 AT %Q*: INT;	//Charger 5 - Voltage Setpoint	
	R1_09_05 AT %Q*: INT;	//Charger 6 - Voltage Setpoint	
	R1_09_06 AT %Q*: INT;	//spare
	R1_09_07 AT %Q*: INT;	//spare
	
	R1_10_7F_CANrequest AT %Q*: EXTCANQUEUE; //this one is for 7F
	R1_10_ARR_CANrequest AT %Q*: ARRAY [1..12] OF EXTCANQUEUE ;	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>